<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resultContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/result"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/keyboard1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboard1"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/keyboard2"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/keyboard2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboard2"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/keyboard3"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/keyboard1"
            app:layout_constraintTop_toTopOf="@id/keyboard1" />

        <Button
            android:id="@+id/keyboard3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboard3"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/keyboardDivider"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/keyboard2"
            app:layout_constraintTop_toTopOf="@id/keyboard1" />

        <View
            android:id="@+id/keyboardDivider"
            android:layout_width="1dp"
            android:layout_height="190dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/keyboardBackspace"
            app:layout_constraintStart_toEndOf="@+id/keyboard3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/keyboardBackspace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboardBackspace"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/keyboardDivider"
            app:layout_constraintTop_toTopOf="@id/keyboard1" />

        <Button
            android:id="@+id/keyboard4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboard4"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboard1"
            app:layout_constraintStart_toStartOf="@id/keyboard1"
            app:layout_constraintTop_toBottomOf="@id/keyboard1" />

        <Button
            android:id="@+id/keyboard5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboard5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboard2"
            app:layout_constraintStart_toStartOf="@id/keyboard2"
            app:layout_constraintTop_toTopOf="@id/keyboard4" />

        <Button
            android:id="@+id/keyboard6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboard6"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboard3"
            app:layout_constraintStart_toStartOf="@id/keyboard3"
            app:layout_constraintTop_toTopOf="@id/keyboard4" />

        <Button
            android:id="@+id/keyboardLeftParenthesis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboardLeftParenthesis"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/keyboardRightParenthesis"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/keyboardBackspace"
            app:layout_constraintTop_toTopOf="@id/keyboard4" />

        <Button
            android:id="@+id/keyboardRightParenthesis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboardRightParenthesis"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboardBackspace"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/keyboardLeftParenthesis"
            app:layout_constraintTop_toTopOf="@id/keyboard4" />

        <Button
            android:id="@+id/keyboard7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboard7"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboard1"
            app:layout_constraintStart_toStartOf="@id/keyboard1"
            app:layout_constraintTop_toBottomOf="@id/keyboard4" />

        <Button
            android:id="@+id/keyboard8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboard8"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboard2"
            app:layout_constraintStart_toStartOf="@id/keyboard2"
            app:layout_constraintTop_toTopOf="@id/keyboard7" />

        <Button
            android:id="@+id/keyboard9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboard9"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboard3"
            app:layout_constraintStart_toStartOf="@id/keyboard3"
            app:layout_constraintTop_toTopOf="@id/keyboard7" />

        <Button
            android:id="@+id/keyboardPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboardPlus"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboardLeftParenthesis"
            app:layout_constraintStart_toStartOf="@id/keyboardLeftParenthesis"
            app:layout_constraintTop_toTopOf="@id/keyboard7" />

        <Button
            android:id="@+id/keyboardMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboardMinus"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboardRightParenthesis"
            app:layout_constraintStart_toStartOf="@id/keyboardRightParenthesis"
            app:layout_constraintTop_toTopOf="@id/keyboard7" />

        <Button
            android:id="@+id/keyboard0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboard0"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboard2"
            app:layout_constraintStart_toStartOf="@id/keyboard1"
            app:layout_constraintTop_toBottomOf="@id/keyboard7" />

        <Button
            android:id="@+id/keyboardPoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboardPoint"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboard3"
            app:layout_constraintStart_toStartOf="@id/keyboard3"
            app:layout_constraintTop_toTopOf="@id/keyboard0" />

        <Button
            android:id="@+id/keyboardMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboardMultiply"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboardLeftParenthesis"
            app:layout_constraintStart_toStartOf="@id/keyboardLeftParenthesis"
            app:layout_constraintTop_toTopOf="@id/keyboard0" />

        <Button
            android:id="@+id/keyboardDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyboardDivide"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/keyboardRightParenthesis"
            app:layout_constraintStart_toStartOf="@id/keyboardRightParenthesis"
            app:layout_constraintTop_toTopOf="@id/keyboard0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
